[metadata]
name = passway-cli
version = 0.1.0
author = TekiDev
author_email = tekidev0.projects@outlook.com
description = A configurable command-line tool for generating strong passwords.
url = https://github.com/tekidev0/Passway
license = MIT
keywords = password, generator, cli, security, python

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    # Add any external libraries here. Currently, none are needed.

[options.entry_points]
# This creates a system-wide executable command named 'passway'
console_scripts = 
    passway = passway.__main__:main
